--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,12 +16,12 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.7,<3.12
     - setuptools >=42
     - setuptools-scm >=3.4
     - pip
   run:
-    - python >=3.7
+    - python >=3.7,<3.12
     - pyside2
     - qdarkstyle
 
